snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha512
ceb6d98cd27e9e4e4f375578e826cc0c1129d7abe4c4b601d837e9bb61b5b5f3d5ff5ad8287d3a316c2f80f26d584285416dc66825f6101738afa415ad67da7f